Part4_Kubernetes/Chapter03/Ch03_03-ingress-alb/terraform-vpc/security-group.tf
resource "aws_security_group" "wclub-int-sg-bastion" {

  name   = "wclub-int-sg-bastion"
  vpc_id = aws_vpc.wclub-int-vpc.id

  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "ingress security_group_rule for bastion"
    from_port   = "22"
    protocol    = "tcp"
    self        = "false"
    to_port     = "22"
  }

  egress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "egress security_group_rule for bastion"
    from_port   = "0"
    protocol    = "tcp"
    self        = "false"
    to_port     = "65535"
  }

  tags = {
    Name = "wclub-int-sg-bastion"
  }
}
